# LightsPlusPlus

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml
docs/: config  deploy.sh
docs/html/: HTTPHandler_8cpp.html  HTTPHandler_8cpp_source.html  HTTPHandler_8h.html  HTTPHandler_8h_source.html  README_8md.html  annotated.html  annotated_dup.js  bridge_8cpp.html  bridge_8cpp_source.html  bridge_8h.html  bridge_8h_source.html  classBridge-members.html  classBridge.html  classHTTPHandler.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  index.html  library_8cpp.html  library_8cpp.js  library_8cpp_source.html  library_8h.html  library_8h.js  library_8h_source.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
docs/latex/: md_README.tex  refman.tex
include/: HTTPHandler.h  HTTPHandler.hpp  bridge.h  bridge.hpp  group.hpp  library.h  light.h  light.hpp  lightspp.hpp
include/exceptions/: bridge_exceptions.hpp  group_exceptions.h  light_exceptions.h  light_exceptions.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  HTTPHandler.cpp  bridge.cpp  group.cpp  jsoncpp.cpp  library.cpp  light.cpp  lightspp.cpp
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  bridge_tests.cpp  cmake_install.cmake  group_tests.cpp  lights_test.cpp  main.cpp  network_tests.cpp  testing_config.h
tests/basic_tests/: CMakeLists.txt  Makefile  basic_check.cpp  cmake_install.cmake
tests/network_tests/: CMakeLists.txt  Makefile  cmake_install.cmake  network_tests.cpp
